# Enigma

./: .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  README_PYPI.md  api.py  conftest.py  demo_dashboard.html  docker-compose.yml  enigma_app.py  enigma_dev.spec  enigma_release.py  enigma_release.spec  pqc_scanner.spec  pqc_scanner_gui.py  project_status.md  pyproject.toml  pytest.ini  quantum_security_toolkit.py  session_log.json  system_scan_preview.txt
demo/: scan_report.html  scan_report.json  scan_report.sarif
demo/sample_vulnerable_project/: api.js  app.py  crypto_utils.go  nginx.conf  requirements.txt  server.java
github-action/: action.yml  example-workflow.yml  scan.py
phases/phase1_math/: modular_math.py  test_modular_math.py
phases/phase2_classical/: aes.py  cryptopals.py  ecc.py  ed25519.py  rsa.py  sha256.py  test_aes.py  test_cryptopals.py  test_ecc.py  test_ed25519.py  test_rsa.py  test_sha256.py  test_tls_analyzer.py  tls_analyzer.py
phases/phase3_quantum/: hardware_report.txt  hardware_results.json  quantum_circuits.py  quantum_hardware.py  test_quantum_circuits.py  test_quantum_hardware.py
phases/phase4_threats/: quantum_threats.py  test_quantum_threats.py
phases/phase5_pqc/: ml_kem.py  pqc_lattice.py  test_ml_kem.py  test_pqc_lattice.py
phases/phase6_scanner/: ai_triage.py  ast_scanner.py  autofix.py  benchmark.py  callgraph.py  competitive_analysis.md  compliance.py  dashboard.py  demo_report.html  dependency_scanner.py  executive_report.py  history.py  migration_estimator.py  pqc_scanner.py  reachability.py  readiness.py  rules_engine.py  sbom_enrichment.py  system_scanner.py  test_ast_scanner.py  test_cutting_edge.py  test_pqc_scanner.py  test_reachability.py  test_readiness.py  test_treesitter_scanner.py  test_v4_features.py  test_waves345.py  treesitter_scanner.py
phases/phase7_qkd/: qkd_protocols.py  test_qkd_protocols.py
phases/phase8_portfolio/: portfolio.py  test_portfolio.py
tools/: generate_capstone.py  generate_corporate_pdf.py  generate_phase1_research.py  generate_phase2_research.py  generate_phase3_research.py  generate_phase4_research.py  generate_phase5_research.py  generate_phase9_cycle_blueprint.py  generate_session_11.py  generate_test_guide.py
vscode-extension/: package-lock.json  package.json  pqc-scanner-4.0.0.vsix
vscode-extension/src/: extension.ts
